--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
+          context: ${{ matrix.IMAGES }}
           tags: ghcr.io/${{ github.actor }}/${{ matrix.IMAGES }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
