--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           context: ${{ matrix.IMAGES }}
-          tags: ghcr.io/${{ github.actor }}/${{ matrix.IMAGES }}
+          tags: ghcr.io/${{ github.actor }}/${{ matrix.IMAGES }}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
 
