fix: layer name

--- a/hentaiathome/Dockerfile
+++ b/hentaiathome/Dockerfile
@@ -13,6 +13,6 @@ RUN apk --no-cache add unzip \
     && mkdir -p /hath/download
 
 FROM gcr.io/distroless/java17-debian11 as runtime
-COPY --from=builder /hath /hath
+COPY --from=base /hath /hath
 WORKDIR /hath
 CMD ['HentaiAtHome.jar', '--cache-dir=/hath/data/cache', '--data-dir=/hath/data/data', '--download-dir=/hath/download', '--log-dir=/hath/data/log', '--temp-dir=/hath/data/temp']
